# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtdecode"
version = "1.0.0"
description = "Fetch and decode vector tiles"
readme = "Readme.md"
authors = [{ name = "Metric-Void", email = "metricvoidlx@gmail.com"}]
license = { text = "MIT", url = "https://opensource.org/licenses/MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "protobuf==4.21.1",
    "geojson==2.5.0",
    "aiohttp==3.8.1",
    "aiohttp-retry==2.4.6",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Metric-Void/vtdecode"

[project.scripts]
vtdecode = "vtdecode.main:main"
vtdecode-mapillary = "vtdecode.mapillary:main"